<resources>
    <string name="app_name">Event Planner</string>
    <string name="first">First Navigation</string>
    <string name="second">Second Navigation</string>
    <string name="welcome_desc">K W Event Planner</string>
    <string name="onboard_sc1_name">Create Events</string>
    <string name="onboard_sc1_desc">Now it’s easy to  create host and manage your events</string>
    <string name="onboard_sc1_skip">Skip</string>
    <string name="onboard_sc1_next">Got it, Next</string>
    <string name="onboard_sc1_event_image">Event Image</string>
    <string name="onboard_sc1_bgImage">background Image</string>
    <string name="onboard_sc2_name">Manage Timeline</string>
    <string name="onboard_sc2_desc">Mark your event data and time in your timeline and get remainder status</string>
    <string name="onboard_sc2_skip">Skip</string>
    <string name="onboard_sc2_next">Cool, Next</string>
    <string name="onboard_sc2_event_image">Calender Image</string>
    <string name="onboard_sc3_name">Search Locations</string>
    <string name="onboard_sc3_desc">Now it\'s easy to search locations for events</string>
    <string name="onboard_sc3_next">Get Started</string>
    <string name="onboard_sc3_event_image">Location Image</string>
    <string name="login_sc_name">LOGIN</string>
    <string name="login_sc_image">Image Login</string>
    <string name="login_email_hint">Email</string>
    <string name="login_pw_hint">Password\n</string>
    <string name="login_sc_fwp">Forgot Password ?</string>
    <string name="login_sc_sign">Don\'t have an Accont ?</string>
    <string name="login_sc_signup">Sign Up</string>
    <string name="login_sc_login">LogIn</string>
    <string name="signup_sc_name">SIGN UP</string>
    <string name="signup_sc_bgimg">image</string>
    <string name="signup_sc_fname">First Name</string>
    <string name="signup_sc_lname">Last Name</string>
    <string name="signup_sc_mail">Email</string>
    <string name="signup_sc_mobile">Mobile Number</string>
    <string name="signup_sc_pw">Password</string>
    <string name="signup_sc_togglebox">Password</string>
    <string name="signup_sc_signupbtn">Sign Up</string>
    <string name="signup_sc_loginbtn">Log In</string>
    <string name="signup_sc_checkbox"><![CDATA[By creating an account yu are agree to our Terms & Conditions]]></string>
    <string name="signup_sc_already">"Already have an account ? "</string>
    <string name="signup_sc_loginname">Log In</string>
    <string name="maininter_user">User</string>
    <string name="appname">I M Event Planner</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Countdown :</string>
    <string name="home_days">Days</string>
    <string name="home_hours">Hours\n</string>
    <string name="home_minutes">Minutes</string>
    <string name="days">09</string>
    <string name="hours">10</string>
    <string name="minutes">20</string>
    <string name="map">Map</string>
    <string name="desc_home">Enjoy with friends, family. plan your event with I M Event Planner</string>
    <string name="profileimg">user</string>

</resources>