<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_marginTop="600dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.995">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_sc_sign"
            android:textSize="18sp"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/button7"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/login_sc_signup"
            android:textColor="@color/primary"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="177dp"
        android:text="@string/login_sc_name"
        android:textColor="@color/primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="238dp"
        android:layout_height="210dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/login_sc_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="398dp"
        android:layout_height="283dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="320dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.629"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextTextEmailAddress4"
            android:layout_width="325dp"
            android:layout_height="62dp"
            android:backgroundTint="@color/gray_input"
            android:ems="10"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="15sp"
            android:backgroundTint="@color/gray_input"
            android:ems="10"
            android:hint="@string/login_pw_hint"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="15dp"
            android:text="@string/login_sc_fwp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/secondary"
            android:text="@string/login_sc_login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>