<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="135dp"
            android:layout_height="128dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="15dp"
            android:background="@color/lavender"
            android:contentDescription="@string/profileimg"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:text="@string/signup_sc_fname"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/signup_sc_lname"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/signup_sc_mail"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/signup_sc_mobile"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="203dp"
            android:layout_height="218dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20sp"
            android:src="@drawable/bluelinepage" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>